@@ -1,3 +1,5 @@
+* #4993: Only approve subscriptions coming from a trusted server (cassidy)
+
 Snapshot 4c8e8b71b5
 
 * #4896: Make subscribe/presence channel tracking not dependent on which order
